--- a/10-secret.yaml
+++ b/10-secret.yaml
@@ -4,5 +4,7 @@ metadata:
   name: pod-secret
 type: Opaque
 data:
-  username: c2l2YWt1bWFyCg==
+  username: c3VyZXNoCg==
   password: YWRtaW4xMjMK
+
+
